beautify html code

--- a/index.html
+++ b/index.html
@@ -1,155 +1,163 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Association des parents d'élèves de l'école Jules Verne de Chevaigné</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <!-- My style -->
-        <link href="css/style.css" rel="stylesheet" media="screen">
-	<link rel="shortcut icon" href="favicon.ico" />
-    </head>
-    <body>
-           <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-           <a href="#Actions" class="navbar-brand">Principales actions à venir</a>
+
+<head>
+    <title>Association des parents d'élèves de l'école Jules Verne de Chevaigné</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <!-- My style -->
+    <link href="css/style.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="favicon.ico" />
+</head>
+
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#Actions" class="navbar-brand">Principales actions à venir</a>
+            </div>
+            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#Action 1">Fournitures scolaires</a>
+                    </li>
+                    <li class="active">
+                        <a href="#Action 2">Fête de fin d'année</a>
+                    </li>
+                    <li class="active">
+                        <a href="#Action 3">Pique-nique de fin d'année</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
+                    </li>
+                    <li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE">S'inscrire à la liste de diffusion</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-	 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav">
-       <li class="active">
-          <a href="#Action 1">Fournitures scolaires</a>
-        </li>
-	<li class="active">
-          <a href="#Action 2">Fête de fin d'année</a>
-        </li>
-	<li class="active">
-          <a href="#Action 3">Pique-nique de fin d'année</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a></li>
-        <li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE">S'inscrire à la liste de diffusion</a></li>
-      </ul>
-    </nav>
-      </div>
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-	    <div class="bs-docs-header" id="content">
-		      <div class="container">
-		          <div class="row">
-		    <div class="col-md-4">
-		    <br/>
-			<img title="Jules Verne" alt="Jules Verne" src="./media/JulesVerne.jpg">
-		    </div>
-		    <div class="col-md-8">
-		    <br/>
-			<h1>APE Jules Verne</h1>
-			<p>Page de l'association des parents d'élèves de l'école Jules Verne</p></div>
-		    </div>
-		      </div>
-	     </div>
-	     <div class="container">
-	     <br/>
-		 <div class="row">
-		 <div class="col-md-2">
-	          <p><a class="btn btn-success" href="mailto:apejulesvernebureau@ml.free.fr" role="button">Nous contacter</a></p></div>
-		<div class="col-md-2"><p><a class="btn btn-primary" href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE" role="button">S'inscrire à la liste de diffusion</a></p></div>
-		</div>
-	      </div>
+        <div class="bs-docs-header" id="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <br/>
+                        <img title="Jules Verne" alt="Jules Verne" src="./media/JulesVerne.jpg">
+                    </div>
+                    <div class="col-md-8">
+                        <br/>
+                        <h1>APE Jules Verne</h1>
+                        <p>Page de l'association des parents d'élèves de l'école Jules Verne</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <br/>
+            <div class="row">
+                <div class="col-md-2">
+                    <p><a class="btn btn-success" href="mailto:apejulesvernebureau@ml.free.fr" role="button">Nous contacter</a>
+                    </p>
+                </div>
+                <div class="col-md-2">
+                    <p><a class="btn btn-primary" href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE" role="button">S'inscrire à la liste de diffusion</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-      
- <a name="Actions"></a>
- <br/>
+
+    <a name="Actions"></a>
+    <br/>
     <div class="container">
-    <h1>Principales actions à venir</h1>
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-	<a name="Action 1"></a>
-          <h2>Fournitures Scolaires</h2>
-          <p>Comme l'année dernière, l'APE organise avec les enseignants de l'école un achat groupé de fournitures scolaires. l'opération auralieu durant le mois de mai.</p>
-	  <p>Cette section sera mise à jour prochainement</p>
+        <h1>Principales actions à venir</h1>
+        <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-md-4">
+                <a name="Action 1"></a>
+                <h2>Fournitures Scolaires</h2>
+                <p>Comme l'année dernière, l'APE organise avec les enseignants de l'école un achat groupé de fournitures scolaires. l'opération auralieu durant le mois de mai.</p>
+                <p>Cette section sera mise à jour prochainement</p>
+            </div>
+            <div class="col-md-4">
+                <a name="Action 2"></a>
+                <h2>Fête de fin d'année le samedi 14 juin 2014</h2>
+                <p>Nous sommes actuellement en train de réfléchir au renouvellement de quelques stands et sommes ouverts à toute suggestion.</p>
+            </div>
+            <div class="col-md-4">
+                <a name="Action 3"></a>
+                <h2>Pique-nique de fin d'année le mardi 1er juillet 2014</h2>
+                <p>Pique nique proposé aux parents, aux enfants et aux enseignants, au sein de l'école.</p>
+            </div>
         </div>
-        <div class="col-md-4">
-	<a name="Action 2"></a>
-          <h2>Fête de fin d'année le samedi 14 juin 2014</h2>
-          <p>Nous sommes actuellement en train de réfléchir au renouvellement de quelques stands et sommes ouverts à toute suggestion.</p>
-       </div>
-        <div class="col-md-4">
-	<a name="Action 3"></a>
-          <h2>Pique-nique de fin d'année le mardi 1er juillet 2014</h2>
-          <p>Pique nique proposé aux parents, aux enfants et aux enseignants, au sein de l'école.</p>
+        <hr>
+        <a name="APE"></a>
+        <div class="container">
+            <h1>L'APE en quelques mots</h1>
+
+            <h3>Qu’est-ce que l’A.P.E. Jules Verne ?</h3>
+            L'APE Jules Verne est une Association de Parents d’Elèves régie par la loi de 1901. Elle n’est affiliée à aucune fédération (APEEP, FCPE) : elle est entièrement autonome.
+
+            <h3>A quoi sert l’A.P.E. ?</h3>
+            <p>
+                L’A.P.E. organise des manifestations avec deux objectifs : créer une animation autour de l'école et faire en sorte que les enfants, les parents et les enseignants se rencontrent hors cadre scolaire recueillir des fonds et participer ainsi au financement des activités péri-scolaires (sorties, spectacles, classe de neige, classe verte, classe de mer… la liste n’est pas exhaustive).
+            </p>
+            <p>
+                L’A.P.E. prend part au financement de diverses actions durant l’année scolaire :
+                <ul>
+                    <li>Financement, en partie, des sorties scolaires</li>
+                    <li>Goûter de Noël</li>
+                    <li>Pique nique de fin d’année : apéritif</li>
+                </ul>
+            </p>
+            Les recettes proviennent exclusivement des différentes actions pour lesquelles vous pouvez, en tant que parents d'élèves, être sollicités :
+            <ul>
+                <li>Vente des Calendriers familiaux</li>
+                <li>Vente d’articles de Noël</li>
+                <li>Livrets de recettes</li>
+                <li>Tombola (galettes des rois)</li>
+                <li>Soirée de mars</li>
+                <li>Fête de l’école</li>
+            </ul>
+
+            <h3>Comment participer ?</h3>
+            Chacun peut aider à l'organisation des diverses manifestations selon ses disponibilités.
+            <p>
+                Pour l'organisation des manifestations (faire les courses, préparation de la salle, cuisine, service, nettoyage, tenir un stand pour la kermesse…).
+                <p>
+                    Vous pouvez, en nous contactant, vous inscrire pour nous aider de différentes manières:
+                    <ul>
+                        <li>recevoir les compte rendus (par mail)</li>
+                        <li>faire partie de la liste de diffusion des personnes acceptant d’aider dans l’organisation des activités</li>
+                        <li>faire partie des membres actifs en participant aux réunions et aux prises de décisions.</li>
+                    </ul>
+                    <p>
+                        Bien sûr, le fait d'être membre actif ne vous oblige pas à participer à toutes les réunions, manifestations. Chacun fait selon ses disponibilités. C'est lors de la fête de juin que le besoin en personnel est le plus important.
+                        <p>
+                            Toute l’équipe actuelle vous remercie par avance pour l’aide que vous pourrez lui apporter. Si vous avez de nouvelles idées n’hésitez pas à nous en faire part.
         </div>
-      </div>
-<hr>
-<a name="APE"></a>
-<div class="container">
-    <h1>L'APE en quelques mots</h1>
 
-<h3>Qu’est-ce que l’A.P.E. Jules Verne ?</h3>
-L'APE Jules Verne est une Association de Parents d’Elèves régie par la loi de 1901. Elle n’est affiliée à aucune fédération (APEEP, FCPE) : elle est entièrement autonome.
+        <hr>
 
-<h3>A quoi sert l’A.P.E. ?</h3>
-<p>
-L’A.P.E. organise des manifestations avec deux objectifs : 
-créer une animation autour de l'école et faire en sorte que les enfants, les parents et les enseignants se rencontrent hors cadre scolaire
-recueillir des fonds et participer ainsi au financement des activités péri-scolaires (sorties, spectacles, classe de neige, classe verte, classe de mer… la liste n’est pas exhaustive).
-</p>
-<p>
-L’A.P.E. prend part au financement de diverses actions durant l’année scolaire :
-<ul>
-<li>Financement, en partie, des sorties scolaires</li>
-<li>Goûter de Noël</li>
-<li>Pique nique de fin d’année : apéritif</li>			
-</ul>
-</p>
-Les recettes proviennent exclusivement des différentes actions pour lesquelles vous pouvez, en tant que parents d'élèves, être sollicités :
-<ul>
-<li>Vente des Calendriers familiaux</li>			
-<li>Vente d’articles de Noël</li>		
-<li>Livrets de recettes</li>		
-<li> Tombola (galettes des rois)</li>	
-<li>Soirée de mars</li>			
-<li>Fête de l’école</li>			
-</ul>
+        <footer>
+            <p>-- o --</p>
+        </footer>
+    </div>
+    <!-- /container -->
+</body>
+<footer>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+</footer>
 
-<h3>Comment participer ?</h3>
-Chacun peut aider à l'organisation des diverses manifestations selon ses disponibilités. 
-<p>
-Pour l'organisation des manifestations (faire les courses, préparation de la salle, cuisine, service, nettoyage, tenir un stand pour la kermesse…).
-<p>
-Vous pouvez, en nous contactant, vous inscrire pour nous aider de différentes manières: 
-<ul>
-<li>recevoir les compte rendus (par mail)</li>
-<li>faire partie de la liste de diffusion des personnes acceptant d’aider dans l’organisation des activités</li>
-<li>faire partie des membres actifs en participant aux réunions et aux prises de décisions.</li>			
-</ul>
-<p>
-Bien sûr, le fait d'être membre actif ne vous oblige pas à participer à toutes les réunions, manifestations. 
-Chacun fait selon ses disponibilités. 
-C'est lors de la fête de juin que le besoin en personnel est le plus important.
-<p>
-Toute l’équipe actuelle vous remercie par avance pour l’aide que vous pourrez lui apporter. Si vous avez de nouvelles idées n’hésitez pas à nous en faire part.
-</div>
-      
-      <hr>
-
-      <footer>
-        <p>-- o --</p>
-      </footer>
-    </div> <!-- /container -->
-    </body>
-    <footer>
-        <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-    </footer>
 </html>
