--- a/actions.html
+++ b/actions.html
@@ -1,94 +1,83 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Nos précédentes actions</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <!-- My style -->
-        <link href="css/style.css" rel="stylesheet" media="screen">
-        <link rel="shortcut icon" href="favicon.ico" />
-    </head>
-    <body>
-           <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-           <a href="#Actions" class="navbar-brand">Principales actions à venir</a>
+
+<head>
+    <title>Nos précédentes actions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <!-- My style -->
+    <link href="css/style.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="favicon.ico">
+</head>
+
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span>  <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>  <span class="icon-bar"></span> 
+                </button>
+                <a href="#Actions" class="navbar-brand">Principales actions à
+venir</a> 
+            </div>
+            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation"></nav>
+            <ul class="nav navbar-nav">
+                <li class="active"> <a href="#Action%201">Fournitures scolaires</a> 
+                </li>
+                <li class="active"> <a href="#Action%202">F&ecirc;te de fin
+d'année</a> 
+                </li>
+                <li class="active"> <a href="#Action%203">Pique-nique de fin
+d'année</a> 
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
+                </li>
+                <li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription%20liste%20APE">S'inscrire
+à la liste de diffusion</a>
+                </li>
+            </ul>
         </div>
-	 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-      <ul class="nav navbar-nav">
-       <li class="active">
-          <a href="#Action 1">Fournitures scolaires</a>
-        </li>
-	<li class="active">
-          <a href="#Action 2">Fête de fin d'année</a>
-        </li>
-	<li class="active">
-          <a href="#Action 3">Pique-nique de fin d'année</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a></li>
-        <li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE">S'inscrire à la liste de diffusion</a></li>
-      </ul>
-    </nav>
-      </div>
     </div>
-<br/>
-
- <a name="Actions"></a>
- <br/>
+    <br>
+    <a name="Actions"></a>
+    <br>
     <div class="container">
-    <h1>Nos précédenses actions</h1>
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-	<a name="Action 1"></a>
-          <h2>Chasse aux oeufs</h2>
-          <p>Comme l'année dernière, l'APE organise avec les enseignants de l'école un achat groupé de fournitures scolaires. l'opération auralieu durant le mois de mai.</p>
-	  <p>Cette section sera mise à jour prochainement</p>
+        <h1>Nos précédenses actions</h1>
+        <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-md-4">
+                <a name="Action 1"></a>
+                <h2>Chasse aux oeufs</h2>
+                <p>Comme l'année dernière, l'APE organise avec les enseignants de l'école un achat groupé de fournitures scolaires. l'opération auralieu durant le mois de mai.</p>
+                <p>Cette section sera mise à jour prochainement</p>
+            </div>
+            <div class="col-md-4">
+                <a name="Action 2"></a>
+                <h2>D&icirc;ner Spectacle du printemps 2014 de l'APE Jules Verne</h2>
+                <p>C'est le samedi 29 mars que l'association des parents d'élèves a donné rendez vous aux familles et aux enseignants pour le traditionnel d&icirc;ner spectacle du mois de mars.
+                </p>
+                <p>Cette année, c'est un repas réunionnais que nous avons confectionné grâce à Sophie Leibovitsch, pour le plus grand plaisir de tous. La classe de CM1 a présenté une danse, des contes Tsiganes ont été racontés par Jean-François Michau, accompagné à l'accordéon par Yann Fanch Perroches. Et c'est avec le concours de quatre parents musiciens, Gérald, Pierre, Gwénael et Christophe, que la soirée a pu s'achever sur des airs de musique bretonne.
+                </p>
+                <p>L'ensemble des membres de l'A.P.E. Jules Verne remercie tous les parents qui ont pu donner de leur temps pour les aider, ainsi que l'équipe enseignante, pour sa disponibilité.
+                </p>
+                <p>
+                    <img title="Jeff" alt="Jeff contant" src="./media/jeff.jpg" width="auto">
+                </p>
+            </div>
         </div>
-        <div class="col-md-4">
-	<a name="Action 2"></a>
-          <h2>Dîner Spectacle du printemps 2014 de l'APE Jules Verne</h2>
-          <p>
-C'est le samedi 29 mars que l'association des parents d'élèves a donné rendez vous aux familles et
-
-aux enseignants pour le traditionnel dîner spectacle du mois de mars.
-<p>
-Cette année, c'est un repas réunionnais que nous avons confectionné grâce à Sophie Leibovitsch,
-
-pour le plus grand plaisir de tous. La classe de CM1 a présenté une danse, des contes Tsiganes ont
-
-été racontés par Jean­François Michau, accompagné à l'accordéon par Yann Fanch Perroches. Et
-
-c'est avec le concours de quatre parents musiciens, Gérald, Pierre, Gwénael et Christophe, que la
-
-soirée a pu s'achever sur des airs de musique bretonne.
-<p>
-L’ensemble des membres de l’A.P.E. Jules Verne remercie tous les parents qui ont pu donner
-
-de leur temps pour les aider, ainsi que l’équipe enseignante, pour sa disponibilité.
-<p>
-<img title="Jeff" alt="Jeff contant" src="./media/jeff.jpg" width="auto">
-       </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p><a href="index.html"><-- retour --></a></p>
-      </footer>
-    </div> <!-- /container -->
-    </body>
+        <hr>
+        <footer></footer>
+        <p><a href="index.html">&lt;-- retour --&gt;</a>
+        </p>
+    </div>
+    <!-- /container -->
     <footer>
         <script src="http://code.jquery.com/jquery.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </footer>
+</body>
+
 </html>
