--- a/actions.html
+++ b/actions.html
@@ -18,41 +18,45 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span>  <span class="icon-bar"></span>
                     <span class="icon-bar"></span>  <span class="icon-bar"></span> 
                 </button>
-                <a href="#Actions" class="navbar-brand">Principales actions à
-venir</a> 
+                <a href="./index.html#Actions" class="navbar-brand">Principales actions à venir</a> 
             </div>
-            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation"></nav>
-            <ul class="nav navbar-nav">
-                <li class="active"> <a href="#Action%201">Fournitures scolaires</a> 
-                </li>
-                <li class="active"> <a href="#Action%202">F&ecirc;te de fin
-d'année</a> 
-                </li>
-                <li class="active"> <a href="#Action%203">Pique-nique de fin
-d'année</a> 
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
-                </li>
-                <li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription%20liste%20APE">S'inscrire
-à la liste de diffusion</a>
-                </li>
-            </ul>
+            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+		    <ul class="nav navbar-nav">
+			<li class="active"> <a href="./actions.html">Actions passées</a>
+			</li>
+			<li class="active"> <a href="./index.html#APE">L'APE</a> 
+			</li>
+		    </ul>
+		    <ul class="nav navbar-nav navbar-right">
+			<li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
+			</li>
+			<li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription%20liste%20APE">S'inscrire
+	à la liste de diffusion</a>
+			</li>
+		    </ul>
+	 </nav>
         </div>
     </div>
     <br>
     <a name="Actions"></a>
     <br>
     <div class="container">
-        <h1>Nos précédenses actions</h1>
-        <!-- Example row of columns -->
+     <br>
+        <h1>Nos précédentes actions</h1>
+	 <br>
+        <h3>Année 2013 - 2014</h3>
+	 <br>
         <div class="row">
             <div class="col-md-4">
                 <a name="Action 1"></a>
                 <h2>Chasse aux oeufs</h2>
-                <p>Comme l'année dernière, l'APE organise avec les enseignants de l'école un achat groupé de fournitures scolaires. l'opération auralieu durant le mois de mai.</p>
-                <p>Cette section sera mise à jour prochainement</p>
+                    <p>Le 19 avril 2014, les enfants de Chevaigné ont pu participer à une chasse aux oeufs, organisée par l'APE. </p>
+		<p>Trois itinéraires plus ou moins long avaient été élaborés par Sinje Stark. </p>
+		<p>Le long de ces parcours, des CDs avaient étés cachés. Les enfants devaient alors pointer sur un plan les CDs découverts lors du trajet afin de gagner un oeuf en chocolat. </p>
+		<p>La chasse s'est achevée par un tirage au sort permettant à quelques veinards de gagner de gros lots...en chocolat bien sûr!</p>
+		<a href="https://www.flickr.com/photos/_sk/5522637092/">
+		<img title="Image de Stéphanie Kilgast" alt="" src="./media/OeufsChocolat.jpg" width="auto"> 
+		</a>
             </div>
             <div class="col-md-4">
                 <a name="Action 2"></a>
@@ -64,7 +68,7 @@ d'année</a>
                 <p>L'ensemble des membres de l'A.P.E. Jules Verne remercie tous les parents qui ont pu donner de leur temps pour les aider, ainsi que l'équipe enseignante, pour sa disponibilité.
                 </p>
                 <p>
-                    <img title="Jeff" alt="Jeff contant" src="./media/jeff.jpg" width="auto">
+                    <img title="Jeff et Yann-Fanch, photo de Vincent Richard" alt="Jeff contant, accompagné de Yann Fanch" src="./media/jeff.jpg" width="auto">
                 </p>
             </div>
         </div>
