--- a/index.html
+++ b/index.html
@@ -15,33 +15,26 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span>  <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>  <span class="icon-bar"></span> 
                 </button>
-                <a href="#Actions" class="navbar-brand">Principales actions à venir</a>
+                <a href="./index.html#Actions" class="navbar-brand">Principales actions à venir</a> 
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="#Action 1">Fournitures scolaires</a>
-                    </li>
-                    <li class="active">
-                        <a href="#Action 2">Fête de fin d'année</a>
-                    </li>
-                    <li class="active">
-                        <a href="#Action 3">Pique-nique de fin d'année</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
-                    </li>
-                    <li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE">S'inscrire à la liste de diffusion</a>
-                    </li>
-                </ul>
-            </nav>
+		    <ul class="nav navbar-nav">
+			<li class="active"> <a href="./actions.html">Actions passées</a>
+			</li>
+			<li class="active"> <a href="./index.html#APE">L'APE</a> 
+			</li>
+		    </ul>
+		    <ul class="nav navbar-nav navbar-right">
+			<li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
+			</li>
+			<li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription%20liste%20APE">S'inscrire
+	à la liste de diffusion</a>
+			</li>
+		    </ul>
+	 </nav>
         </div>
     </div>
 
@@ -79,6 +72,7 @@
 
     <a name="Actions"></a>
     <br/>
+    <br/>
     <div class="container">
         <h1>Principales actions à venir</h1>
         <!-- Example row of columns -->
@@ -102,6 +96,8 @@
         </div>
         <hr>
         <a name="APE"></a>
+	<br/>
+	<br/>
         <div class="container">
             <h1>L'APE en quelques mots</h1>
 
