--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Association des parents d'élèves de l'école Jules Verne de Chevaigné</title>
+    <title>Association des parents d'Ã©lÃ¨ves de l'Ã©cole Jules Verne de ChevaignÃ©</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -18,11 +18,11 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span>  <span class="icon-bar"></span>
                     <span class="icon-bar"></span>  <span class="icon-bar"></span> 
                 </button>
-                <a href="./index.html#Actions" class="navbar-brand">Principales actions à venir</a> 
+                <a href="./index.html#Actions" class="navbar-brand">Principales actions Ã  venir</a> 
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 		    <ul class="nav navbar-nav">
-			<li class="active"> <a href="./actions.html">Actions passées</a>
+			<li class="active"> <a href="./actions.html">Actions passÃ©es</a>
 			</li>
 			<li class="active"> <a href="./index.html#APE">L'APE</a> 
 			</li>
@@ -31,7 +31,7 @@
 			<li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
 			</li>
 			<li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription%20liste%20APE">S'inscrire
-	à la liste de diffusion</a>
+	Ã  la liste de diffusion</a>
 			</li>
 		    </ul>
 	 </nav>
@@ -50,7 +50,7 @@
                     <div class="col-md-8">
                         <br/>
                         <h1>APE Jules Verne</h1>
-                        <p>Page de l'association des parents d'élèves de l'école Jules Verne</p>
+                        <p>Page de l'association des parents d'Ã©lÃ¨ves de l'Ã©cole Jules Verne</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     </p>
                 </div>
                 <div class="col-md-2">
-                    <p><a class="btn btn-primary" href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE" role="button">S'inscrire à la liste de diffusion</a>
+                    <p><a class="btn btn-primary" href="mailto:vincent.tollu@gmail.com?subject=Inscription liste APE" role="button">S'inscrire Ã  la liste de diffusion</a>
                     </p>
                 </div>
             </div>
@@ -74,24 +74,24 @@
     <br/>
     <br/>
     <div class="container">
-        <h1>Principales actions à venir</h1>
+        <h1>Principales actions Ã  venir</h1>
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-4">
                 <a name="Action 1"></a>
                 <h2>Fournitures Scolaires</h2>
-                <p>Comme l'année dernière, l'APE organise avec les enseignants de l'école un achat groupé de fournitures scolaires. l'opération auralieu durant le mois de mai.</p>
-                <p>Cette section sera mise à jour prochainement</p>
+                <p>Comme l'annÃ©e derniÃ¨re, l'APE organise avec les enseignants de l'Ã©cole un achat groupÃ© de fournitures scolaires. l'opÃ©ration auralieu durant le mois de mai.</p>
+                <p>Cette section sera mise Ã  jour prochainement</p>
             </div>
             <div class="col-md-4">
                 <a name="Action 2"></a>
-                <h2>Fête de fin d'année le samedi 14 juin 2014</h2>
-                <p>Nous sommes actuellement en train de réfléchir au renouvellement de quelques stands et sommes ouverts à toute suggestion.</p>
+                <h2>FÃªte de fin d'annÃ©e le samedi 14 juin 2014</h2>
+                <p>Nous sommes actuellement en train de rÃ©flÃ©chir au renouvellement de quelques stands et sommes ouverts Ã  toute suggestion.</p>
             </div>
             <div class="col-md-4">
                 <a name="Action 3"></a>
-                <h2>Pique-nique de fin d'année le mardi 1er juillet 2014</h2>
-                <p>Pique nique proposé aux parents, aux enfants et aux enseignants, au sein de l'école.</p>
+                <h2>Pique-nique de fin d'annÃ©e le mardi 1er juillet 2014</h2>
+                <p>Pique nique proposÃ© aux parents, aux enfants et aux enseignants, au sein de l'Ã©cole.</p>
             </div>
         </div>
         <hr>
@@ -101,46 +101,46 @@
         <div class="container">
             <h1>L'APE en quelques mots</h1>
 
-            <h3>Qu’est-ce que l’A.P.E. Jules Verne ?</h3>
-            L'APE Jules Verne est une Association de Parents d’Elèves régie par la loi de 1901. Elle n’est affiliée à aucune fédération (APEEP, FCPE) : elle est entièrement autonome.
+            <h3>Quâ€™est-ce que lâ€™A.P.E. Jules Verne ?</h3>
+            L'APE Jules Verne est une Association de Parents dâ€™ElÃ¨ves rÃ©gie par la loi de 1901. Elle nâ€™est affiliÃ©e Ã  aucune fÃ©dÃ©ration (APEEP, FCPE) : elle est entiÃ¨rement autonome.
 
-            <h3>A quoi sert l’A.P.E. ?</h3>
+            <h3>A quoi sert lâ€™A.P.E. ?</h3>
             <p>
-                L’A.P.E. organise des manifestations avec deux objectifs : créer une animation autour de l'école et faire en sorte que les enfants, les parents et les enseignants se rencontrent hors cadre scolaire recueillir des fonds et participer ainsi au financement des activités péri-scolaires (sorties, spectacles, classe de neige, classe verte, classe de mer… la liste n’est pas exhaustive).
+                Lâ€™A.P.E. organise des manifestations avec deux objectifs : crÃ©er une animation autour de l'Ã©cole et faire en sorte que les enfants, les parents et les enseignants se rencontrent hors cadre scolaire recueillir des fonds et participer ainsi au financement des activitÃ©s pÃ©ri-scolaires (sorties, spectacles, classe de neige, classe verte, classe de merâ€¦ la liste nâ€™est pas exhaustive).
             </p>
             <p>
-                L’A.P.E. prend part au financement de diverses actions durant l’année scolaire :
+                Lâ€™A.P.E. prend part au financement de diverses actions durant lâ€™annÃ©e scolaire :
                 <ul>
                     <li>Financement, en partie, des sorties scolaires</li>
-                    <li>Goûter de Noël</li>
-                    <li>Pique nique de fin d’année : apéritif</li>
+                    <li>GoÃ»ter de NoÃ«l</li>
+                    <li>Pique nique de fin dâ€™annÃ©e : apÃ©ritif</li>
                 </ul>
             </p>
-            Les recettes proviennent exclusivement des différentes actions pour lesquelles vous pouvez, en tant que parents d'élèves, être sollicités :
+            Les recettes proviennent exclusivement des diffÃ©rentes actions pour lesquelles vous pouvez, en tant que parents d'Ã©lÃ¨ves, Ãªtre sollicitÃ©s :
             <ul>
                 <li>Vente des Calendriers familiaux</li>
-                <li>Vente d’articles de Noël</li>
+                <li>Vente dâ€™articles de NoÃ«l</li>
                 <li>Livrets de recettes</li>
                 <li>Tombola (galettes des rois)</li>
-                <li>Soirée de mars</li>
-                <li>Fête de l’école</li>
+                <li>SoirÃ©e de mars</li>
+                <li>FÃªte de lâ€™Ã©cole</li>
             </ul>
 
             <h3>Comment participer ?</h3>
-            Chacun peut aider à l'organisation des diverses manifestations selon ses disponibilités.
+            Chacun peut aider Ã  l'organisation des diverses manifestations selon ses disponibilitÃ©s.
             <p>
-                Pour l'organisation des manifestations (faire les courses, préparation de la salle, cuisine, service, nettoyage, tenir un stand pour la kermesse…).
+                Pour l'organisation des manifestations (faire les courses, prÃ©paration de la salle, cuisine, service, nettoyage, tenir un stand pour la kermesseâ€¦).
                 <p>
-                    Vous pouvez, en nous contactant, vous inscrire pour nous aider de différentes manières:
+                    Vous pouvez, en nous contactant, vous inscrire pour nous aider de diffÃ©rentes maniÃ¨res:
                     <ul>
                         <li>recevoir les compte rendus (par mail)</li>
-                        <li>faire partie de la liste de diffusion des personnes acceptant d’aider dans l’organisation des activités</li>
-                        <li>faire partie des membres actifs en participant aux réunions et aux prises de décisions.</li>
+                        <li>faire partie de la liste de diffusion des personnes acceptant dâ€™aider dans lâ€™organisation des activitÃ©s</li>
+                        <li>faire partie des membres actifs en participant aux rÃ©unions et aux prises de dÃ©cisions.</li>
                     </ul>
                     <p>
-                        Bien sûr, le fait d'être membre actif ne vous oblige pas à participer à toutes les réunions, manifestations. Chacun fait selon ses disponibilités. C'est lors de la fête de juin que le besoin en personnel est le plus important.
+                        Bien sÃ»r, le fait d'Ãªtre membre actif ne vous oblige pas Ã  participer Ã  toutes les rÃ©unions, manifestations. Chacun fait selon ses disponibilitÃ©s. C'est lors de la fÃªte de juin que le besoin en personnel est le plus important.
                         <p>
-                            Toute l’équipe actuelle vous remercie par avance pour l’aide que vous pourrez lui apporter. Si vous avez de nouvelles idées n’hésitez pas à nous en faire part.
+                            Toute lâ€™Ã©quipe actuelle vous remercie par avance pour lâ€™aide que vous pourrez lui apporter. Si vous avez de nouvelles idÃ©es nâ€™hÃ©sitez pas Ã  nous en faire part.
         </div>
 
         <hr>
