--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Association des parents d'élèves de l'école Jules Verne de Chevaigné</title>
+    <title>Association des parents d'élèves de l'école Jules Verne de Chevaigné - APE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
