--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     <br/>
     <div class="container">
     
-     <h1 style="color:#428BCA">Assemblée Générale de l'APE le jeudi 9 octobre à 20h30</h1>
-     <p>Salle à déterminer.</p>
+     <h1 style="color:#428BCA">Assemblée Générale de l'APE le jeudi 9 octobre à 20h30 salle Jean Zay</h1>
      <br/>
      <br/>
         <h1>Principales actions à venir</h1>
@@ -99,6 +98,7 @@
                 <p>Cette année l'APE organise une vente de calendriers familiaux, édités par l'association des Korrigans de Saint Médard sur Ille.</p>
 		<p>Ils sont vendus au prix de 6€ et seront distribués devant l'école le vendredi 26 septembre devant l'école.</p>
 		 <br/>
+		 <p>Il reste quelques calendriers, contactez l'APE si vous en avez réservé ou si vous voulez en acheter.</p>
 		 <p>
                     <img title="Calendriers familiaux" alt="Calendriers familiaux" src="./media/calendriers.jpg" width="auto">
                 </p>
