Bauhaus on title

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="col-md-8">
                         <br/>
-                        <h1>APE Jules Verne</h1>
+                        <h1 id='titre'>APE Jules Verne</h1>
 
                         <p>Page de l'association des parents d'élèves de l'école Jules Verne</p>
 
