Changed contact email

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</li>
 		    </ul>
 		    <ul class="nav navbar-nav navbar-right">
-			<li><a href="mailto:apejulesvernebureau@ml.free.fr">Nous contacter</a>
+			<li><a href="mailto:apejulesverne35250@gmail.com">Nous contacter</a>
 			</li>
 			<li><a href="mailto:vincent.tollu@gmail.com?subject=Inscription%20liste%20APE">S'inscrire
 
@@ -66,7 +66,7 @@
             <br/>
             <div class="row">
                 <div class="col-md-2">
-                    <p><a class="btn btn-success" href="mailto:apejulesvernebureau@ml.free.fr" role="button">Nous contacter</a>
+                    <p><a class="btn btn-success" href="mailto:apejulesverne35250@gmail.com" role="button">Nous contacter</a>
                     </p>
                 </div>
                 <div class="col-md-2">
