bon commande bulbes

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <p>L'APE organise une vente de sapins de noël, en association avec un pépiniériste de Betton. <br/><br/>Les bons de commandes sont à retourner pour le 06 novembre.</p>
 		<br/>
 		<a title="Bon commande" href="BonCommandeSapins.doc">Bon de commande</a>
+		<br/>
 		<p>
 		<a title="By HikingArtist.com [CC-BY-2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AChristmas_tree_ink04.jpg">
 			<img alt="Christmas tree ink04" src="./media/Christmas_tree_ink04.jpg"/>
@@ -108,6 +109,8 @@
                 <h2>Vente de bulbes</h2>
 
                 <p>L'APE organise une vente de bulbes et autres graines de fleurs,  des mots ont étés distribués dans les cahiers. <br/><br/>Les bons de commandes sont à retourner pour le 06 novembre.</p>
+		<br/>
+		<a title="Bon commande" href="BonCommandeBulbes.jpg">Bon de commande</a>
 		<br/>
 		<p><img title="Bulbes" alt="Bulbes" src="./media/fleurs.jpg" width="auto"></p>
             </div>
