précisions bulbes sapins

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                 <p>L'APE organise une vente de sapins de noël, en association avec un pépiniériste de Betton. <br/><br/>Les bons de commandes sont à retourner pour le 06 novembre.</p>
 		<br/>
-		<a title="Bon commande" href="BonCommandeSapins.doc">Bon de commande</a>
+		La livraison des sapins se fera le vendredi 12 décmbre à partir de 16h45 devant l'école.
 		<br/>
 		<p>
 		<a title="By HikingArtist.com [CC-BY-2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AChristmas_tree_ink04.jpg">
@@ -110,7 +110,7 @@
 
                 <p>L'APE organise une vente de bulbes et autres graines de fleurs,  des mots ont étés distribués dans les cahiers. <br/><br/>Les bons de commandes sont à retourner pour le 06 novembre.</p>
 		<br/>
-		<a title="Bon commande" href="BonCommandeBulbes.jpg">Bon de commande</a>
+		La commande est partie, la livraison des bulbes devrait se faire tout début décembre.
 		<br/>
 		<p><img title="Bulbes" alt="Bulbes" src="./media/fleurs.jpg" width="auto"></p>
             </div>
@@ -137,7 +137,7 @@
             <h1>L'APE en quelques mots</h1>
 
  <div class="col-md-12">
-	<p>L'assemblée générale de l'association s'est tenue le 09 octobre 2014</p>
+	<p>L'assemblée générale de l'association s'est tenue le 10 octobre 2014</p>
 	<br/>
 	<p>Composition du bureau pour l 'année scolaire à venir</p>
 	<ul>
