--- a/index.html
+++ b/index.html
@@ -90,13 +90,28 @@
 
         <div class="row">
 
+	 <div class="col-md-4">
+                <a name="Action 3"></a>
+                <h2>Gouter de noël</h2>
+
+                <p>L'APE organise avec l'équipe enseignante et le personnel de la cantine le gouter de noël des enfants. <br/></p>
+		<br/>
+		Le gouter aura lieu l'après-midi du mardi 16 décembre.
+		<br/>
+		<p>
+		<a title="[CC BY 3.0 (http://creativecommons.org/licenses/by/3.0/], via christmasstockimages.com" href="http://christmasstockimages.com/free/objects/slides/glass_baubles.htm">
+			<img alt="Christmas bubbles" src="./media/glass_baubles.jpg"/>
+		</a>
+		</p>
+            </div>
+	    
 	    <div class="col-md-4">
-                <a name="Action 1"></a>
+                <a name="Action 3"></a>
                 <h2>Vente de sapins de noël</h2>
 
-                <p>L'APE organise une vente de sapins de noël, en association avec un pépiniériste de Betton. <br/><br/>Les bons de commandes sont à retourner pour le 06 novembre.</p>
+                <p>L'APE organise une vente de sapins de noël, en association avec un pépiniériste de Betton. <br/></p>
 		<br/>
-		La livraison des sapins se fera le vendredi 12 décmbre à partir de 16h45 devant l'école.
+		La livraison des sapins se fera le vendredi 12 décembre à partir de 16h45 devant l'école.
 		<br/>
 		<p>
 		<a title="By HikingArtist.com [CC-BY-2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3AChristmas_tree_ink04.jpg">
@@ -105,12 +120,12 @@
 		</p>
             </div>
 	     <div class="col-md-4">
-                <a name="Action 1"></a>
+                <a name="Action 2"></a>
                 <h2>Vente de bulbes</h2>
 
                 <p>L'APE organise une vente de bulbes et autres graines de fleurs,  des mots ont étés distribués dans les cahiers. <br/><br/>Les bons de commandes sont à retourner pour le 06 novembre.</p>
 		<br/>
-		La commande est partie, la livraison des bulbes devrait se faire tout début décembre.
+		La livraison des bulbes devrait s'est faite tout début décembre.
 		<br/>
 		<p><img title="Bulbes" alt="Bulbes" src="./media/fleurs.jpg" width="auto"></p>
             </div>
