--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
 
         <div class="row">
 
+	<div class="col-md-4">
+                <a name="Action 3"></a>
+                <h2>Chocolats de noël</h2>
+
+                <p>Cette année, Sophie relance la vente de petits ballotins gourmands, avec la complicité des chocolats MontBana. 
+		<br/>
+		Nous proposons des sachets (3€ le sachet) de 20 pièces à déguster (10 carrés de chocolats Noir & Lait aux multiples saveurs et 10 gourmandises (amandes, pralines). 
+		</p>
+		<br/>
+		Les ventes autont lieu :
+		<ul>
+		<li>le vendredi 5/12 de 16h45 à 18h</li>
+		<li>le mardi 9/12 de 16h45 à 18h</li>
+		<li>le vendredi 12/12 16h45 à 18h</li>
+		</ul>
+		<br/>
+		<br/>
+		<p>
+		<img alt="ChocolatsMontbana" src="./media/ChocolatsMontbana.jpg"/>
+		</p>
+            </div>
+	    
 	 <div class="col-md-4">
                 <a name="Action 3"></a>
                 <h2>Gouter de noël</h2>
