Ajout gallerie mars

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 		<br/>
 		Dans une ambiance asiatique, Arécia et Pierre ont effectué un spectacle musical. 
 		</p>
-		
+		<a href="./Gallery/PhotosMars2015/gallerie.html"> Quelques photos</a>
+		</p>
             </div>
 	    
 	    
