--- a/Gallery/PhotosMars2015/gallerie.html
+++ b/Gallery/PhotosMars2015/gallerie.html
@@ -75,7 +75,7 @@ video{
 <br/><br/>
 Affichage des images assuré par <a href="http://www.huddletogether.com/projects/lightbox2/">LightBox 2</a>
 </span>
-<p><a href="/">&lt;-- retour --&gt;</a>
+<p><a href="/APE">&lt;-- retour --&gt;</a>
 </div>
 </body>
 </html>
