Add chasse oeufs

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
 		<a title="thanks to benbrahemb" href="http://www.renders-graphiques.fr/galerie/Nature-63/Paques-Oeufs-Arbres--110681.htm">
 			<img alt="ChocolatsPaques" src="./media/Paques.jpg"/>
 		</p>
+		</p>
+		<a href="./Gallery/ChasseOeufs/gallery.html"> Quelques photos</a>
+		</p>
             </div>
 	    
 	    <div class="col-md-4">
