--- a/Gallery/marchenoel/gallery.html
+++ b/Gallery/marchenoel/gallery.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html>
 <head>
 <title>Marché de noël 2016</title>
 <meta content="text/html; charset=UTF-8" http-equiv="content-type">
@@ -27,7 +27,7 @@ video{
 <link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" >
 </head>
 <body style="background-color:Black; color: White;">
-<big style="font-weight: bold;"><big><big><big>Nouveau dossier</big></big></big></big>
+<big style="font-weight: bold;"><big><big><big>Marché de noël 2016</big></big></big></big>
 <div style="text-align: center;">
 <span class="pics">
 <BR/>
