Ajout gouter noel

--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
                  
       </div>
         
+        <div class="row">
+
+         <div class="col-md-4">
+        <a name="Action 3"></a>
+
+        <h2>Gouter de noël</h2>
+
+        <p>L'APE organise avec l'équipe enseignante et le personnel de la cantine le gouter de noël des enfants.
+          <br>
+        </p>
+        <br> Le gouter aura lieu l'après-midi du mardi 13 décembre.
+        <br>
+
+        <p>
+            <img alt="gouternoel" src="./media/clochettes.jpg">
+        </p>
+      </div>
+
+
         <div class="col-md-4">
             <a name="Action 3"></a>
 
